# RestaurantOS

./: .gitattributes  .gitignore  AUDITORIA_ESTRATEGICA.md  AUDITORIA_MVP.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_shifts.py  0003_device_tokens.py  0004_shift_status_draft_published.py  0005_notification_completion.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: admin.py  auth.py  clock.py  employees.py  import_shifts.py  manager.py  notifications.py  restaurants.py  router.py  shifts.py
backend/app/core/: config.py  database.py  deps.py  email.py  jobs.py  security.py
backend/app/models/: __init__.py  audit.py  base.py  correction.py  employee.py  enums.py  export.py  incident.py  notification.py  restaurant.py  shift.py  tenant.py  time_clock.py  user.py
backend/app/schemas/: auth.py  clock.py  employee.py  restaurant.py  shift.py  tenant.py
backend/app/services/: push.py
backend/tests/: conftest.py  test_corrections.py  test_health.py  test_notifications.py  test_tenant_isolation.py
design/: ui-mockup.html
docs/: COMPETITIVE_ANALYSIS.md  DEMO_FLOW.md  DEPLOY_HOY.md  DESIGN_SYSTEM.md  MODULE_1_FICHAJE.md  STUDIO32_CORE_ARCHITECTURE.md
mobile/: README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
scripts/: onboard_client.py  reset_demo.py  seed_demo.py  test_clock_flow.py  test_kiosk_flow.py
web/: README.md  package-lock.json  package.json  (+2 more)
(+77 files in other folders)
